feat(terraform): add GCS and BigQuery modules with documented variables

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,20 @@ uv.lock
 
 #notebook
 notebooks/
+
+
+# TERRAFORM BLOCK
+
+.terraform/
+
+*.tfstate
+*.tfstate.*
+
+*.tfvars
+terraform.tfvars
+
+.terraform.lock.hcl
+
+crash.log
+crash.log.*
+*.tfplan
