--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,41 @@
-## ----- 🗄️ DATABASE CONFIGURATION -----
-#DB_USER=postgres
-#DB_PASSWORD=postgres
-#DB_NAME=ny_taxi
-#
-## OPTION A: Running locally (DB in Docker, main.py on laptop)
-#DB_HOST=localhost
-#DB_PORT=5433
-#
-## OPTION B: Running inside container (main.py in Docker)
-## DB_HOST=db
-## DB_PORT=5432
-#
-## ----- 🚕 DATA INGESTION SETTINGS -----
-#
-#KEEP_LOCAL=true
-#PARQUET_BATCH_SIZE=100000
-#
-#DATA_URL=https://d37ci6vzurychx.cloudfront.net/trip-data/green_tripdata_2025-11.parquet
-#
-##https://d37ci6vzurychx.cloudfront.net/trip-data/green_tripdata_2025-11.parquet
-##https://github.com/DataTalksClub/nyc-tlc-data/releases/download/misc/taxi_zone_lookup.csv
-#
+# ==============================================================================
+# NY TAXI INGESTION PIPELINE - ENV CONFIGURATION
+# ------------------------------------------------------------------------------
+# Priority: 1. CLI Flags | 2. Env Vars | 3. Code Defaults
+# Copy this to .env and adjust as needed.
+# ==============================================================================
+
+# --- DATABASE CONNECTION ---
+# Host: Use 'pgdatabase' for Docker, 'localhost' for local machine.
+DB_HOST=pgdatabase
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=ny_taxi
+DB_SCHEMA=public
+
+# --- DEFAULT INGESTION PARAMETERS ---
+# TAXI: yellow | green
+# FILE_FORMAT: parquet | csv
+TAXI=yellow
+YEAR=2024
+MONTH=01
+FILE_FORMAT=parquet
+
+# --- INGESTION STRATEGY ---
+# IF_EXISTS: replace (Atomic Swap) | skip | fail | append
+IF_EXISTS=replace
+# Set to 'true' to retain downloaded files after ingestion
+KEEP_LOCAL=true
+
+# --- PERFORMANCE TUNING ---
+# Chunk Size: Rows processed per memory chunk
+# Batch Size: Rows sent per DB batch operation
+LOADER_CHUNK_SIZE=100000
+LOADER_BATCH_SIZE=5000
+
+# --- OPTIONAL CONFIGS ---
+# DATA_URL: Overrides URL for 'ingest-url' command
+DATA_URL=
+# LOG_LEVEL: DEBUG | INFO | WARNING | ERROR
+LOG_LEVEL=INFO
