docs(repo): update README and ignore rules

--- a/.env.example
+++ b/.env.example
@@ -1,41 +1,47 @@
-# ==============================================================================
-# NY TAXI INGESTION PIPELINE - ENV CONFIGURATION
-# ------------------------------------------------------------------------------
-# Priority: 1. CLI Flags | 2. Env Vars | 3. Code Defaults
-# Copy this to .env and adjust as needed.
-# ==============================================================================
-
-# --- DATABASE CONNECTION ---
-# Host: Use 'pgdatabase' for Docker, 'localhost' for local machine.
-DB_HOST=pgdatabase
+# ----------------------------
+# Database (PostgreSQL)
+# ----------------------------
+# Local runs: typically "localhost"
+# Docker Compose runs: DB_HOST is overridden to "db" inside the container
+DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=ny_taxi
 DB_SCHEMA=public
 
-# --- DEFAULT INGESTION PARAMETERS ---
-# TAXI: yellow | green
-# FILE_FORMAT: parquet | csv
-TAXI=yellow
-YEAR=2024
+# ----------------------------
+# Default ingestion parameters
+# ----------------------------
+TAXI=green
+YEAR=2021
 MONTH=01
 FILE_FORMAT=parquet
 
-# --- INGESTION STRATEGY ---
-# IF_EXISTS: replace (Atomic Swap) | skip | fail | append
+# ----------------------------
+# Ingestion strategy
+# ----------------------------
+# IF_EXISTS: replace | skip | fail | append
 IF_EXISTS=replace
-# Set to 'true' to retain downloaded files after ingestion
 KEEP_LOCAL=true
 
-# --- PERFORMANCE TUNING ---
-# Chunk Size: Rows processed per memory chunk
-# Batch Size: Rows sent per DB batch operation
-LOADER_CHUNK_SIZE=100000
-LOADER_BATCH_SIZE=5000
+# ----------------------------
+# Loader tuning (defaults in code)
+# ----------------------------
+LOADER_CHUNK_SIZE=50000
+LOADER_BATCH_SIZE=10000
 
-# --- OPTIONAL CONFIGS ---
-# DATA_URL: Overrides URL for 'ingest-url' command
-DATA_URL=
-# LOG_LEVEL: DEBUG | INFO | WARNING | ERROR
+# ----------------------------
+# Paths / logging
+# ----------------------------
+# DATA_DIR overrides the runtime download directory (default: ./data)
+DATA_DIR=
 LOG_LEVEL=INFO
+
+# Progress bar friendly console output (default in code: true)
+ENABLE_PROGRESS=true
+
+# ----------------------------
+# Optional: used by ingest-url command
+# ----------------------------
+DATA_URL=
